update profile picture and website title

--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joshua | Modern Portfolio</title>
+    <title>Joshua | My Portfolio website</title>
     <script
       src="https://kit.fontawesome.com/c0032ddc4b.js"
       crossorigin="anonymous"
@@ -786,10 +786,7 @@
       </div>
       <div class="hero-image">
         <div class="image-container">
-          <img
-            src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80"
-            alt="Joshua"
-          />
+          <img src="My pic2.jpg" alt="Joshua" />
         </div>
       </div>
     </section>
@@ -844,7 +841,6 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
     <section class="projects" id="projects">
       <div class="container">
         <h2 class="section-title">My Projects</h2>
@@ -912,7 +908,7 @@
           <div class="project-card">
             <div class="project-image">
               <img
-                src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80"
+                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80"
                 alt="Task Management App"
               />
             </div>
@@ -953,7 +949,7 @@
               </div>
               <div class="contact-details">
                 <h3>Location</h3>
-                <p>San Francisco, CA</p>
+                <p>Illishan-remo Ogun State, Nigeria</p>
               </div>
             </div>
             <div class="contact-item">
@@ -971,7 +967,7 @@
               </div>
               <div class="contact-details">
                 <h3>Phone</h3>
-                <p>+1 (555) 123-4567</p>
+                <p>+2348167561963</p>
               </div>
             </div>
           </div>
