Cleanup: Remove unnecessary folders from portfolio

--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                   <i class="fas fa-external-link-alt"></i> Live Demo
                 </a>
                 <a
-                  href="https://github.com/yourusername/productivity-dashboard"
+                  href="https://github.com/obinnajoshua185-star/productivity-dashboard"
                   class="project-link"
                 >
                   <i class="fab fa-github"></i> Source Code
@@ -987,7 +987,10 @@
                 <a href="Readfile/Quoteapi/Quote.html" class="project-link">
                   <i class="fas fa-external-link-alt"></i> Live Demo
                 </a>
-                <a href="#" class="project-link">
+                <a
+                  href="https://github.com/obinnajoshua185-star/portfolio/blob/main/Readfile/Quoteapi/Quote.html"
+                  class="project-link"
+                >
                   <i class="fab fa-github"></i> Source Code
                 </a>
               </div>
