feat: Add social media profile links to portfolio
- Add LinkedIn, Twitter, and CodePen profile links
- All links open in new tabs with security attributes
- Add social icons to both footer and hero section
- Include hover effects and tooltips for better UX

--- a/index.html
+++ b/index.html
@@ -1204,10 +1204,37 @@
           </div>
 
           <div class="social-icons">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-codepen"></i></a>
+            <a
+              href="https://www.linkedin.com/in/joshua-obinna/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+
+            <a
+              href="https://github.com/obinnajoshua185-star"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-github"></i>
+            </a>
+
+            <a
+              href="https://x.com/Obin47994Joshua"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-twitter"></i>
+            </a>
+
+            <a
+              href="https://codepen.io/Joshua-Obinna"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <i class="fab fa-codepen"></i>
+            </a>
           </div>
 
           <div class="copyright">
