feat: add geolocation support and UI enhancements
- Implement 'Use My Location' feature using browser geolocation
- Update color scheme to light blue background
- Improve visual design and user interface

--- a/index.html
+++ b/index.html
@@ -136,10 +136,7 @@
           <!-- Weather App Project - REPLACED Disney Clone -->
           <div class="project-card">
             <div class="project-image">
-              <img
-                src="https://images.unsplash.com/photo-1592210454359-9043f067919b"
-                alt="Weather App"
-              />
+              <img src="images/weather.png" alt="Weather App" />
             </div>
             <div class="project-content">
               <h3 class="project-title">Weather Forecast App</h3>
@@ -181,7 +178,7 @@
           <div class="project-card">
             <div class="project-image">
               <img
-                src="https://images.unsplash.com/photo-1611224923853-80b023f02d71"
+                src="images/productivity dashbaoard2.png"
                 alt="Productivity Dashboard"
               />
             </div>
@@ -225,7 +222,7 @@
           <div class="project-card">
             <div class="project-image">
               <img
-                src="https://images.unsplash.com/photo-1516321497487-e288fb19713f"
+                src="images/Screenshot 2025-12-10 151918.png"
                 alt="Quote Explorer"
               />
             </div>
