--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
           <div class="hero-image">
             <div class="profile-container">
-              <img src="My pic2.jpg" alt="Joshua" />
+              <img src="images/My pic2.jpg" alt="Joshua" />
             </div>
           </div>
         </div>
